# webknossos-connect

./: .bulldozer.yml  .flake8  .gitignore  Dockerfile  Pipfile  README.md  build.py  docker-compose.yml  neuroglancer.json  pyproject.toml  requirements.txt  run  setup.cfg
.circleci/: config.yml
.github/workflows/: main.yml
benchmarks/: decode_jpg.py  run_all.sh
data/: config.json  datasets.json  trace.html
fast_wkw/: Cargo.toml  test.py
fast_wkw/src/: lib.rs  wkw_dataset.rs  wkw_file.rs
py-datastore/: __main__.py  repository.py
py-datastore/backends/: backend.py
py-datastore/backends/neuroglancer/: backend.py  models.py
py-datastore/utils/: http.py  json.py
py-datastore/webknossos/: client.py  models.py
pyDatastore/: repository.py
pyDatastore/backends/neuroglancer/: backend.py
pyDatastore/webknossos/: client.py
py_datastore/: __main__.py  repository.py  tracing.py
py_datastore/backends/: backend.py
py_datastore/backends/neuroglancer/: backend.py  models.py
py_datastore/routes/: trace.py  triggers.py
py_datastore/routes/datasets/: __init__.py  datasource_properties.py  read_data.py  thumbnail.py
py_datastore/utils/: caching.py  colors.py  http.py  json.py  types.py
py_datastore/webknossos/: access.py  client.py  models.py
scripts/: lint.sh  pretty-check.sh  pretty.sh  publish.sh  type-check.sh
stubs/: compressed_segmentation.pyi
stubs/gcloud/aio/: auth.pyi
wkconnect/: .gitignore  __main__.py
wkconnect/backends/: backend.py
wkconnect/backends/boss/: backend.py  client.py  models.py  token_repository.py
wkconnect/backends/neuroglancer/: backend.py  meshes.py  mmh3.py  models.py  sharding.py
wkconnect/backends/tiff/: backend.py  models.py
wkconnect/backends/wkw/: backend.py  models.py
wkconnect/routes/: __init__.py  triggers.py
wkconnect/routes/datasets/: __init__.py  (+7 more)
wkconnect/utils/: blocking.py  caching.py  colors.py  exceptions.py  json.py  scheduler.py  si.py  types.py
wkconnect/webknossos/: access.py  client.py  models.py
