[tool.poetry]
name = "wkconnect"
version = "0.1.0"
description = ""
authors = ["scalable minds <hello@scalableminds.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7"
async-lru = "^1.0"
blosc = "^1.10"
brotlipy = "^0.7.0"
compressed_segmentation = "^1.0"
gcloud-aio-auth = "^3.0"
jpeg4py = "^0.1.4"
numpy = "^1.17"
Pillow = "^6.2"
sanic = "21.3.4"
sanic_cors = "^1.0.0"
tifffile = "^2020.9.3"
wkcuber = "^0.5"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "==19.3b0"
flake8 = "*"
isort = "*"
mypy = "==0.770"
pep8-naming = "*"
py-spy = "*"
pylint = "2.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
